--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url("http://fonts.googleapis.com/css?family=Roboto:500,300");
+
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: "Roboto", Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
