Upgraded filters with react-select

--- a/src/shared/components/FormElements/Filter.css
+++ b/src/shared/components/FormElements/Filter.css
@@ -1,22 +1,15 @@
+.wrapper {
+  text-align: center;
+}
+
 .filter-wrapper {
-  margin: 0 auto;
-  padding: 0;
-  width: 90%;
-  max-width: 50rem;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
 .element {
-  color: #444;
-  line-height: 1.3;
-  margin: 10px;
-  border: 1px solid #aaa;
-  border-radius: .5em;
-  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-  background-color: #fff;
-  cursor: pointer;
+  margin: 1rem;
+  width: 20%;
 }
 
 .filter-select {
