--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1em;
   text-transform: uppercase;
   letter-spacing: 0.125em;
+  font-family: 'Crimson Text', serif;
 }
 
 .slide-in-left-enter {
